fix: table collapse

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -245,6 +245,7 @@ table {
   margin: auto;
   border-top: 1px solid #666;
   border-bottom: 1px solid #666;
+  border-collapse: collapse;
 }
 
 table thead th {
